--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>rina</title>
-  <link rel="stylesheet" type="text/css" href="css/graduation.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
   <style>
   </style>
 </head>
